# backend_converter_ascii

./: .dockerignore  .gitignore  Cargo.toml  backend_converter_ascii.code-workspace  docker-compose.yaml  dockerfile  init-database.sh  insert.txt
db_queries/: Cargo.toml
db_queries/src/: lib.rs
entities/: Cargo.toml  user.rs  video.rs
entities/src/: comment.rs  lib.rs  user.rs  video.rs
entity/src/: Comment.rs  User.rs  Video.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230213_174341_create_table_comment.rs  m20230213_180310_create_table_video.rs
queries/: Cargo.toml
queries/src/: lib.rs
queries/src/entities/: user.rs
src/: main.rs
src/entities/: comment.rs  mod.rs  prelude.rs
