[package]
name = "backend_converter_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "^1.25.0"
futures = "^0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
sea-orm-migration = "^0"
chrono = "^0.4"