[package]
name = "backend_converter_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = {workspace = true }
futures = {workspace = true }
sea-orm = {workspace = true }
sea-orm-migration = {workspace = true }
chrono = {workspace = true }
thiserror = "^1.0"
anyhow = "^1.0.69"
queries = {path = "./queries" }
entities = {path = "./entities" } 


[workspace]
members = ["queries", "entities"]
exclude=["migration"]


[workspace.dependencies]
tokio = "^1.25.0"
futures = "^0.3"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros", "with-chrono", "with-json" ] }
sea-orm-migration = "^0"
chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"